--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,12 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+  <% if enhanced_cart.length == 0%>
+    <div class="alert alert-success" role="alert">
+    <p>Your cart is Empty</p>
+    </div>
+    <button><%= link_to 'Back to home page', products_path %></button>
+    <%else%>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -15,9 +20,9 @@
         </tr>
       </thead>
       <tbody>
-        <% enhanced_cart.each do |item| %>
-          <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
-        <% end %>
+          <% enhanced_cart.each do |item| %>
+           <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
+          <% end %>
       </tbody>
       <tfoot>
         <tr>
@@ -48,5 +53,5 @@
       <% end %>
     </div>
   </div>
-
+  <%end%>
 </section>
