--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -3,7 +3,10 @@
 <h3>Total Products on the website: <%= @products.count%></h3>
 <h3> Link to products: <%= link_to 'Products',  [:admin, :products] %></h3>
 <h3>Total Categories on the website: <%= @categories.count%></h3>
-<h3> Link to categories: <% Category.all.each do |category| %>
-              <li><%= link_to category.name, category %></li>
-            <% end %></h3>
+<h3> 
+  Link to categories: 
+    <% Category.all.each do |category| %>
+      <li><%= link_to category.name, category %></li>
+    <% end %>
+</h3>
 </div>
