--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -17,6 +17,9 @@
         <li>
           <%= link_to 'About Us', controller: 'about' %>
         </li>
+        <li>
+          <%= link_to 'Sign Up', 'signup' %>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Categories
