--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -15,10 +15,7 @@
           <%= link_to 'Home', :root %>
         </li>
         <li>
-          <%= link_to 'About Us', controller: 'about' %>
-        </li>
-        <li>
-          <%= link_to 'Sign Up', 'signup' %>
+          <%= link_to 'About Us', about_index_path %>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -45,6 +42,11 @@
             <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
         </li>
+        <% if current_user %>
+          <li><%= link_to current_user.first_name %></li>  <li><%= link_to "Logout", logout_path %></li>
+        <% else %>
+        <li><%= link_to 'Login', login_path %></li>  <li><%= link_to 'Signup', signup_path %></li>
+        <% end %>
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
